[gd_scene load_steps=22 format=3 uid="uid://yxjysn3avnhl"]

[ext_resource type="Texture2D" uid="uid://ryy8je63yf7e" path="res://sprites/hero/hero.png" id="1_dh7eb"]
[ext_resource type="Script" path="res://scripts/hero.gd" id="1_fhpx2"]
[ext_resource type="Texture2D" uid="uid://dqf5nuxttdeod" path="res://sprites/input.png" id="3_ri7jt"]
[ext_resource type="FontFile" uid="uid://bbrmpyhagtyct" path="res://font/PIXY.ttf" id="4_5h4rp"]
[ext_resource type="Texture2D" uid="uid://d1r431r7ifuj0" path="res://sprites/menu/inv.png" id="5_6i7h2"]
[ext_resource type="Texture2D" uid="uid://o300817wyllp" path="res://sprites/menu/items_menu.png" id="6_2wlxo"]
[ext_resource type="Script" path="res://scripts/InvLog.gd" id="6_eabug"]
[ext_resource type="Script" path="res://scenes/weapon_slot.gd" id="7_ssalp"]
[ext_resource type="PackedScene" uid="uid://whp7d73o3pqr" path="res://scenes/inventory.tscn" id="7_ve8qw"]
[ext_resource type="Script" path="res://scripts/Area2D.gd" id="8_kt70t"]
[ext_resource type="Script" path="res://scripts/armor_slot.gd" id="8_ykify"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ipe5"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mirn7"]
size = Vector2(144, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qgdy"]
size = Vector2(43, 43)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b3m87"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_017yj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5w8w7"]

[sub_resource type="GDScript" id="GDScript_u14dc"]
script/source = "extends LineEdit

func _on_mouse_exited():
	deselect()
"

[sub_resource type="Animation" id="Animation_jskiy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dice:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fq023"]
resource_name = "return"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dice:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-7, -6), Vector2(-7, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("dice:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xncni"]
_data = {
"RESET": SubResource("Animation_jskiy"),
"return": SubResource("Animation_fq023")
}

[node name="Hero" type="CharacterBody2D"]
script = ExtResource("1_fhpx2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0ipe5")

[node name="Hero" type="Sprite2D" parent="."]
texture = ExtResource("1_dh7eb")

[node name="Area2D2" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_mirn7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Inv" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(72, 77)
texture = ExtResource("5_6i7h2")

[node name="Label" type="Label" parent="CanvasLayer/Inv"]
offset_left = -37.0
offset_top = -60.0
offset_right = 42.0
offset_bottom = -37.0
theme_override_colors/font_outline_color = Color(0.694118, 0.694118, 0.694118, 1)
theme_override_fonts/font = ExtResource("4_5h4rp")
text = "Inventory"

[node name="InvLog" type="Node" parent="CanvasLayer/Inv"]
script = ExtResource("6_eabug")

[node name="Inventory" parent="CanvasLayer" instance=ExtResource("7_ve8qw")]
offset_left = -24.0
offset_top = -3.0
offset_right = -24.0
offset_bottom = -3.0
mouse_filter = 2

[node name="Button" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 108.0
offset_top = 39.0
offset_right = 124.0
offset_bottom = 55.0

[node name="weapon_slot" type="ColorRect" parent="CanvasLayer" groups=["items_slots"]]
self_modulate = Color(1, 1, 1, 0)
offset_left = 86.0
offset_top = 99.0
offset_right = 102.0
offset_bottom = 115.0
mouse_filter = 2
script = ExtResource("7_ssalp")

[node name="armor_slot" type="ColorRect" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 106.0
offset_top = 99.0
offset_right = 122.0
offset_bottom = 115.0
mouse_filter = 2
script = ExtResource("8_ykify")

[node name="ItemsMenu" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(72, 83)
texture = ExtResource("6_2wlxo")

[node name="close_button" type="Button" parent="CanvasLayer/ItemsMenu"]
offset_left = 39.0
offset_top = 31.0
offset_right = 52.0
offset_bottom = 44.0

[node name="item_name" type="Label" parent="CanvasLayer/ItemsMenu"]
offset_left = -50.0
offset_top = -60.0
offset_right = 56.0
offset_bottom = -42.0
theme_override_fonts/font = ExtResource("4_5h4rp")
theme_override_font_sizes/font_size = 10
text = " claymore"

[node name="item_damage_or_res" type="Label" parent="CanvasLayer/ItemsMenu"]
offset_left = -50.0
offset_top = -48.0
offset_right = -10.0
offset_bottom = -36.0
theme_override_fonts/font = ExtResource("4_5h4rp")
theme_override_font_sizes/font_size = 10
text = "damage: "

[node name="discription" type="RichTextLabel" parent="CanvasLayer/ItemsMenu"]
offset_left = -50.0
offset_top = -21.0
offset_right = 50.0
offset_bottom = 29.0
theme_override_fonts/normal_font = ExtResource("4_5h4rp")
theme_override_font_sizes/normal_font_size = 10

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("8_kt70t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_8qgdy")
debug_color = Color(0.984314, 0, 0.360784, 0.419608)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Input" type="Sprite2D" parent="CanvasLayer2"]
position = Vector2(72, 152)
texture = ExtResource("3_ri7jt")

[node name="LineEdit" type="LineEdit" parent="CanvasLayer2"]
offset_left = 2.0
offset_top = 137.0
offset_right = 143.0
offset_bottom = 168.0
theme_override_fonts/font = ExtResource("4_5h4rp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b3m87")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_017yj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5w8w7")
clear_button_enabled = true
script = SubResource("GDScript_u14dc")

[node name="dice" type="Label" parent="."]
offset_left = -7.0
offset_top = -6.0
offset_right = 8.0
offset_bottom = 6.0
theme_override_fonts/font = ExtResource("4_5h4rp")
theme_override_font_sizes/font_size = 10
text = "10"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xncni")
}

[node name="damage_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 8)

[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ItemsMenu/close_button" to="." method="_on_close_button_pressed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="mouse_entered" from="CanvasLayer2/LineEdit" to="." method="_on_line_edit_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer2/LineEdit" to="." method="_on_line_edit_mouse_exited"]
[connection signal="mouse_exited" from="CanvasLayer2/LineEdit" to="CanvasLayer2/LineEdit" method="_on_mouse_exited"]
[connection signal="text_submitted" from="CanvasLayer2/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="timeout" from="damage_timer" to="." method="_on_damage_timer_timeout"]
